# tegracli

./: .coverage  .gitignore  .pre-commit-config.yaml  CITATION.bib  LICENSE  README.md  REAME.md  pyproject.toml  setup.cfg  tegracli.conf.template.yml
.github/workflows/: main.yml
tegracli/: __init__.py  dispatch.py  group.py  main.py  types.py  utilities.py
tests/: conftest.py  report.txt  test_cli.py  test_dispatchers.py  test_search.py
tests/.stubs/: tegracli_group.conf.yml
tests/click_tests/: test_cli.py
tests/dispatchers/: test_search.py
