[tool.poetry]
name = "tegracli"
version = "0.1.0"
description = ""
authors = ["Philipp Kessling"]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.24.0"
ujson = "^5.4.0"
click = "^8.1.3"
loguru = "^0.6.0"
PyYAML = "^6.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.1"
isort = "^5.10.1"
pylint = "^2.14.5"
black = "^22.6.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
coverage = "^6.4.2"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tegracli = 'tegracli.main:cli'
