[tool.poetry]
name = "tegracli"
version = "0.2.4"
description = "A research-focused Telegram CLI application"
authors = ["Philipp Kessling <p.kessling@leibniz-hbi.de>", "Felix Münch <f.muench@lebniz-hbi.de>"]
readme  = "README.md"
license = "MIT"
repository  = "https://github.com/Leibniz-HBI/tegracli"
homepage = "https://pypi.org/project/tegracli/"
classifiers = [
		"Development Status :: 3 - Alpha",
		"Environment :: Console",
		"Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.24.0"
ujson = "^5.4.0"
click = "^8.1.3"
loguru = "^0.6.0"
PyYAML = "^6.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipykernel = "^6.9.1"
pytest-socket = "^0.5.1"
pytest-asyncio = "^0.18.3"
black = "^22.6.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
coverage = "^6.4.2"
pydocstyle = "^6.1.1"
pylint = "*"

[tool.pytest.ini_options]
addopts = "--disable-socket --cov-report html:tests/coverage --cov=tegracli --capture=sys"
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tegracli = 'tegracli.main:cli'

[tool.mypy]
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "telethon",
    "telethon.*"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
